Done with css part of the project.

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Your Name</title>
-  </head>
-  <body>
-   
-  </body>
+<head>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <nav>
+        <p>Poojitha Dontineni</p>
+        <p><a href="index.html">About Poojitha Dontineni</a></p>
+    </nav>
+    
+    <h1>Poojitha Dontineni</h1>
+    <p>Address: 3660 Old Kissell Ct., Cumming, GA 30041 &bull; Phone: (678) 469-3447 &bull; Email: poojithadontineni@gmail.com</p>
+    <hr>
+    <section class="one-col">
+        <form action="https://formsubmit.co/poojithadontineni@gmail.com" method="POST">
+            <label for="name">Name:</label><br />
+            <input type="text" id="name" name="name" required /><br /><br />
+
+            <label for="email">Email:</label><br />
+            <input type="email" id="email" name="email" required /><br /><br />
+
+            <label for="message">Message:</label><br />
+            <textarea id="message" name="message"></textarea><br /><br />
+
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    
+    <footer>
+        <p>© <a href="index.html">Poojitha Dontineni</a></p>
+        <a href="https://www.linkedin.com/in/poojithadontineni" 
+           target="_blank" 
+           rel="noopener noreferrer">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+    </footer>
+</body>
 </html>
