--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Your Name</title>
-  </head>
-  <body>
-   
-  </body>
+<head>
+    <title>Poojitha Dontineni</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
+<body>
+    <nav>
+        <p>Poojitha Dontineni</p>
+        <p><a href="contact.html">Contact Poojitha Dontineni</a></p>
+    </nav>
+
+    <header>
+        <h1>Poojitha Dontineni</h1>
+        <img src="images/headshot.jpg" alt="Headshot of Poojitha Dontineni" width="150" height="150">
+        <p class="address"> Address: 3660 Old Kissell Ct., Cumming, GA 30041 &bull; Phone: (678) 469-3447 &bull; Email: poojithadontineni@gmail.com</p>
+        <p class="tagline"> Highly motivated Computer Science student with some hands-on experience in <b>full-stack development</b> (Java, Python, C/C++) and
+        <b>IT support</b>. Excellent analytical and problem-solving skills with a passion for developing scalable applications through <b>AI/ML</b> and
+        <b>cloud computing</b>. Looking for Software Engineering or AI/ML Engineering internships.</p>
+    </header>
+    <hr>
+    <section>
+        <h2>Education</h2>
+        <dl>
+           <dt>University of Georgia</dt>
+           <dd>GPA: 4.0</dd>
+
+           <dt>Bachelor of Science in Computer Science</dt>
+           <dd>Expected Graduation: May 2027</dd>
+        </dl>
+    </section>
+    <section>
+        <h2>Honors and Awards</h2>
+        <dl>
+            <dt>Charter Scholarship</dt>
+            <dd>2024-present</dd>
+
+            <dt>Presidential Scholar</dt>
+            <dd>2024-present</dd>
+        </dl>
+    </section>
+    <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>JavaScript</li>
+            <li>C/C++</li>
+            <li>HTML/CSS</li>
+            <li>SQL</li>
+            <li>Python</li>
+        </ul>
+    </section>
+    <section> 
+        <h2>Leadership and Experience</h2>
+        <dl> 
+            <dt><a href="https://novatech.net">Intern at Novatech</a></dt>
+            <dd>August 2023 - May 2024</dd>
+        </dl>
+        <dl>
+            <dt>Intern at Lely Farms</dt>
+            <dd>June 2026-August 2026</dd>
+        </dl>
+    </section>
+    <section>
+        <h2>Projects</h2>
+        <div class="three-col">
+            <div class="card">
+                <h3>Healthcare Provider Finder App</h3>
+                <img src="images/Healthcare_Provider_Finder_App_Image.png" alt="Healthcare Provider Finder App Homepage" width="300" height="390">
+                <ul>
+                    <li>Built with React Native, Node.js/Express, NPI Registry API, and Google Maps</li>
+                    <li>Uses input condition/ZIP and maps to speciality which then queries API and returns 5 providers with Google Maps links</li>
+                </ul>
+            </div>
+            <div class = "card">
+                <h3>InstaHealth-AI-Powered Symptom Checker</h3>
+                <img src="images/InstaHealth_Image.png" alt="InstaHealth App Homepage" width="400" height="390">
+                <ul>
+                    <li>Utilized Lovable.dev to deploy this application</li>
+                    <li>Integrated Supabase for backend data management and Clerk for user authentication</li>
+                    <li>Allows users to input health symptoms and receive preliminary assignments</li>
+                </ul>
+            </div>
+            <div class = "card">
+                <h3>AI Powered Image Search App</h3>
+                <img src="images/AI_Powered_Image_Search_App_Image.png" alt="AI Powered Image Search App Homepage" width="450" height="390">
+                <ul>
+                    <li>Used OpenAI's CLIP model, FAISS similarity search, PyTorch, and Hugging Face Transformers</li>
+                    <li>Automated image processing with Pillow (PIL) and GitHub Copilot to speed cup coding tasks and improve efficiency</li>  
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <a href="https://www.linkedin.com/in/poojithadontineni" 
+           target="_blank" 
+           rel="noopener noreferrer">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <p>© <a href="contact.html">Poojitha Dontineni</a></p>
+    </footer>
+</body>
 </html>
