Finished making new changes based on peer reviews

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <dd>June 2026-August 2026</dd>
         </dl>
     </section>
-    <section>
+    <section class="projects">
         <h3>Projects</h3>
         <div class="three-col">
             <div class="card">
